--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'de.mannodermaus.android-junit5'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 31
     defaultConfig {
@@ -29,6 +31,10 @@ android {
             targetCompatibility JavaVersion.VERSION_1_8
         }
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -48,6 +54,24 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //Constraint Layout
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+    //Recycler View
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    //View Binding
+    implementation 'com.android.databinding:viewbinding:7.1.2'
+
+    //Material
+    implementation 'com.google.android.material:material:1.5.0'
+
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+
+    //Glide
+    kapt "com.github.bumptech.glide:compiler:4.12.0"
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.12.0@aar"
 
 }
